add coin icon on florist top page

--- a/src/pages/Florist/Florist.module.css
+++ b/src/pages/Florist/Florist.module.css
@@ -16,3 +16,8 @@
   -webkit-filter: hue-rotate(0deg) saturate(0%) brightness(0%);
   filter: hue-rotate(0deg) saturate(0%) brightness(0%);
 }
+
+.coin {
+  width: 15%;
+  height: 15%;
+}
