--- a/src/components/UserViewLayout/UserViewLayout.module.css
+++ b/src/components/UserViewLayout/UserViewLayout.module.css
@@ -20,7 +20,7 @@
 
 .nav {
   height: 10vh;
-  padding-top: 30%;
+  padding-top: 5rem;
   display: flex;
   justify-content: center;
   align-items: flex-end;
