--- a/src/pages/Florist/Florist.module.css
+++ b/src/pages/Florist/Florist.module.css
@@ -12,12 +12,12 @@
 
 .notBoughtPicDialog {
   width: 40%;
-  height: 40%;
+  height: auto;
   -webkit-filter: hue-rotate(0deg) saturate(0%) brightness(0%);
   filter: hue-rotate(0deg) saturate(0%) brightness(0%);
 }
 
 .coin {
-  width: 15%;
-  height: 15%;
+  max-height: 20px;
+  max-width: 20px;
 }
