--- a/src/pages/Florist/Florist.module.css
+++ b/src/pages/Florist/Florist.module.css
@@ -23,6 +23,10 @@
   max-width: 20px;
 }
 
+.coinlabel {
+  margin-top: 1rem;
+}
+
 .flowerPrice {
   margin: 0.3rem 0 0.3rem 0;
   line-height: 1rem;
